BUG: Search breaks when an empty query is submitted BUG: On about page, if column name is too long, it wraps onto the next line and overlaps with text
QA: http://www.pivotaltracker.com/story/show/972804

--- a/public/stylesheets/blist-about-screen.css
+++ b/public/stylesheets/blist-about-screen.css
@@ -333,6 +333,7 @@ span.helpie
     font-size: 1.2em;
     height: 20px;
     line-height: 20px;
+    overflow: hidden;
     padding-left: 25px;
 }
 
